--- a/311.md
+++ b/311.md
@@ -5,3 +5,13 @@ systemctl status docker
 systemctl status atomic-openshift-node
 systemctl status atomic-openshift-master-api
 ```
+
+# Viewing Master Service Logs
+
+To view logs for control plane services running in control plane static pods, use the master-logs command for the respective component:
+
+```
+master-logs api api
+master-logs controllers controllers
+master-logs etcd etcd
+```
