--- a/311.md
+++ b/311.md
@@ -15,3 +15,19 @@ master-logs api api
 master-logs controllers controllers
 master-logs etcd etcd
 ```
+
+# Restarting Master Services
+
+To restart control plane services running in control plane static pods, use the master-restart command on the master host.
+
+To restart the master API:
+
+> master-restart api
+
+To restart the controllers:
+
+> master-restart controllers
+
+To restart etcd:
+
+> master-restart etcd
